--- a/style.css
+++ b/style.css
@@ -1182,7 +1182,7 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
 }
 
 
-.bck-box.bck-box-1 .bck-content {
+.bck-box.bck-box-1>.bck-content {
     padding-left: 0
 }
 
@@ -1190,12 +1190,12 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     border-bottom: none
 }
 
-.bck-box-1 .bck-content {
+.bck-box-1>.bck-content {
     text-align: left;
     padding: 0;
 }
 
-.bck-box-1 .bck-content p {
+.bck-box-1>.bck-content p {
     font-size: 3.2rem
 }
 
@@ -1205,11 +1205,11 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     background: transparent
 }
 
-.bck-box.bck-box-2 .bck-title {
+.bck-box.bck-box-2>.bck-title {
     color: inherit
 }
 
-.bck-box.bck-box-2 .bck-content {
+.bck-box.bck-box-2>.bck-content {
     background-color: #ffffff;
     border: 1px solid #ec6f59;
     border-radius: 30px 30px 30px 30px;
@@ -1237,11 +1237,11 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     background: transparent
 }
 
-.bck-box.bck-box-3 .bck-title {
+.bck-box.bck-box-3>.bck-title {
     color: inherit
 }
 
-.bck-box.bck-box-3 .bck-content {
+.bck-box.bck-box-3>.bck-content {
     background-color: #ffffff;
     border: 1px solid #ec6f59;
     border-radius: 30px 30px 30px 30px;
@@ -1271,7 +1271,7 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     padding: 10px 20px;
 }
 
-.bck-box.bck-box-4 .bck-title {
+.bck-box.bck-box-4>.bck-title {
     color: inherit;
     background: #e79f25;
     border: none;
@@ -1284,7 +1284,7 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     color: #fff;
 }
 
-.bck-box.bck-box-4 .bck-content {
+.bck-box.bck-box-4>.bck-content {
     background-color: #ffffff;
     color: #e79f25;
     border-radius: 10px;
@@ -1297,16 +1297,16 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
         border-radius: 155px 55px 119px 67px/55px 125px 31px 111px;
 }
 
-.bck-box.bck-box-5 .bck-title p {
+.bck-box.bck-box-5>.bck-title p {
     font-size: 2.8rem;
 }
 
-.bck-box.bck-box-5 .bck-title {
+.bck-box.bck-box-5>.bck-title {
     color: #e79f25;
         border: none;
 }
 
-.bck-box.bck-box-5 .bck-content {
+.bck-box.bck-box-5>.bck-content {
     color: #1F1A15;
     border-radius: 10px;
     padding: 6px 44px;
@@ -1323,11 +1323,11 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     border-radius: 0 20px 20px 0;
 }
 
-.bck-box.bck-box-6 .bck-title {
+.bck-box.bck-box-6>.bck-title {
     color: #738A96;
 }
 
-.bck-box.bck-box-6 .bck-title:after {
+.bck-box.bck-box-6>.bck-title:after {
     background: url(images/icono_caja_06.png);
     content: "";
     background-size: contain;
@@ -1341,667 +1341,12 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
 }
 
 
-.bck-box.bck-box-6 .bck-content {
+.bck-box.bck-box-6>.bck-content {
     padding: 8px 92px 8px 19px;
     color: #414141;
 }
 
-.bck-box.bck-box-7 {
-    margin-top: 15px;
-    border: none;
-    background: transparent
-}
 
-.bck-box.bck-box-7 .bck-title {
-    color: inherit
-}
-
-.bck-box.bck-box-7 .bck-content {
-    background-color: #fff;
-    padding: 8px 8px 8px 19px;
-    border: 3px dotted #00889e
-}
-
-.bck-box.bck-box-8 {
-    margin-top: 15px;
-    background: #fff;
-    border: 2px solid #e9423b
-}
-
-.bck-box.bck-box-8 .bck-title {
-    color: #e9423b;
-    padding-left: 10px;
-    padding-top: 10px;
-    padding-bottom: 5px
-}
-
-.bck-box.bck-box-8 .bck-title p {
-    font-weight: 600
-}
-
-.bck-box.bck-box-8 .bck-content {
-    border: 0;
-    text-align: left;
-    padding: 5px 5px 5px 10px
-}
-
-.bck-box.bck-box-8 .bck-title:after {
-    background-image: url(images/rich_english_U7_pg65_img_0001.PNG);
-    content: "";
-    background-size: contain;
-    background-repeat: no-repeat;
-    padding: 27px;
-    position: absolute;
-    right: 14px;
-    width: 10px;
-    height: auto;
-    margin-top: -73px
-}
-
-.bck-box.bck-box-9 {
-    margin-top: 15px;
-    background: transparent;
-    border: 2px solid #e50051;
-    box-shadow: 9px 10px 0 -6px #e50051
-}
-
-.bck-box.bck-box-9 .bck-title {
-    color: #fff;
-    background-color: #e50051;
-    padding-left: 10px;
-    padding-top: 10px;
-    padding-bottom: 5px
-}
-
-.bck-box.bck-box-9 .bck-content {
-    background-color: #fff;
-    padding: 8px 8px 8px 19px;
-    box-shadow: 9px 10px 0 -6px #e50051
-}
-
-.bck-box.bck-box-10 {
-    margin-top: 20px;
-    padding: 20px;
-    background: #efdbea
-}
-
-.bck-box.bck-box-10 .bck-title {
-    color: #b83187;
-    font-weight: 700;
-    font-family: Conv_FuturaStd-Heavy
-}
-
-.bck-box.bck-box-10 .bck-title p {
-    font-size: 22px
-}
-
-.bck-box.bck-box-10 .bck-content {
-    border: 0;
-    text-align: left;
-    padding: 5px 5px 5px 20px
-}
-
-.bck-box.bck-box-10 .bck-title:after {
-    background-image: url(images/icono_pronunt.png);
-    content: "";
-    background-size: contain;
-    background-repeat: no-repeat;
-    padding: 27px;
-    position: absolute;
-    right: 14px;
-    width: 10px;
-    height: auto;
-    margin-top: -73px
-}
-
-.bck-box.bck-box-11 {
-    margin-top: 15px;
-    background: #fff;
-    border: 2px solid #acc33f
-}
-
-.bck-box.bck-box-11 .bck-title {
-    color: #acc33f;
-    padding-left: 10px;
-    padding-top: 10px;
-    padding-bottom: 5px
-}
-
-.bck-box.bck-box-11 .bck-title p {
-    font-weight: 600
-}
-
-.bck-box.bck-box-11 .bck-content {
-    border: 0;
-    text-align: left;
-    padding: 5px 5px 5px 10px
-}
-
-.bck-box.bck-box-11 .bck-title:after {
-    background-image: url(images/icono_readingtools.png);
-    content: "";
-    background-size: contain;
-    background-repeat: no-repeat;
-    padding: 27px;
-    position: absolute;
-    right: 14px;
-    width: 10px;
-    height: auto;
-    margin-top: -73px
-}
-
-.bck-box.bck-box-12 {
-    margin-top: 15px;
-    background: #eef4dc
-}
-
-.bck-box.bck-box-12 .bck-title {
-    color: #fff;
-    background-color: #b83187;
-    padding: 10px 10px 10px 12px;
-    width: fit-content;
-    position: relative;
-    top: -7px;
-    left: -5px
-}
-
-.bck-box.bck-box-12 .bck-content {
-    background-color: #eef4dc;
-    padding: 8px 8px 8px 11px
-}
-
-.bck-box.bck-box-13 {
-    margin-top: 15px;
-    background: #fff;
-    border: 2px solid #d88e00
-}
-
-.bck-box.bck-box-13 .bck-title {
-    color: #d88e00;
-    padding-left: 10px;
-    padding-top: 10px;
-    padding-bottom: 5px
-}
-
-.bck-box.bck-box-13 .bck-title p {
-    font-weight: 600
-}
-
-.bck-box.bck-box-13 .bck-content {
-    border: 0;
-    text-align: left;
-    padding: 5px 5px 5px 10px
-}
-
-.bck-box.bck-box-13 .bck-title:after {
-    background-image: url(images/icono_writtingtools.png);
-    content: "";
-    background-size: contain;
-    background-repeat: no-repeat;
-    padding: 27px;
-    position: absolute;
-    right: 14px;
-    width: 10px;
-    height: auto;
-    margin-top: -73px
-}
-
-.bck-box.bck-box-14 {
-    margin-top: 15px;
-    background: #fff;
-    border: 2px solid #b83187
-}
-
-.bck-box.bck-box-14 .bck-title {
-    color: #b83187;
-    padding-left: 10px;
-    padding-top: 10px;
-    padding-bottom: 5px
-}
-
-.bck-box.bck-box-14 .bck-title p {
-    font-weight: 600
-}
-
-.bck-box.bck-box-14 .bck-content {
-    border: 0;
-    text-align: left;
-    padding: 5px 5px 5px 10px
-}
-
-.bck-box.bck-box-14 .bck-title:after {
-    background-image: url(images/icono_speakingtools.png);
-    content: "";
-    background-size: contain;
-    background-repeat: no-repeat;
-    padding: 27px;
-    position: absolute;
-    right: 14px;
-    width: 10px;
-    height: auto;
-    margin-top: -73px
-}
-
-.bck-box.bck-box-15 {
-    margin-top: 15px;
-    border: 3px dotted #b83187;
-    padding: 0 11px 10px 16px
-}
-
-.bck-box.bck-box-15 .bck-title {
-    color: #b83187
-}
-
-.bck-box.bck-box-15 .bck-title p {
-    font-weight: 700
-}
-
-.bck-box.bck-box-15 .bck-content {
-    background-color: #fff;
-    padding: 8px 8px 8px 0
-}
-
-.bck-box.bck-box-15 .bck-title:before {
-    background-image: url(images/icono_pair.png);
-    content: "";
-    background-size: contain;
-    background-repeat: no-repeat;
-    padding: 49px 39px 0 24px;
-    position: relative;
-    left: -42px;
-    z-index: 100;
-    top: 10px;
-    width: 10px;
-    height: auto;
-    margin-top: -6px
-}
-
-.bck-box.bck-box-16 {
-    position: relative;
-    padding: 0;
-    background-size: cover;
-    top: -22px;
-    left: -97px;
-    width: 125.5%;
-    margin-bottom: -40px
-}
-
-.bck-box-16 .bck-content {
-    padding: 0
-}
-
-.bck-box.bck-box-17 {
-    margin-top: -21px;
-    border: none;
-    background: transparent;
-    width: 387px;
-    margin-left: -55px
-}
-
-.bck-box.bck-box-17 .bck-title {
-    color: inherit
-}
-
-.bck-box.bck-box-17 .bck-content {
-    background-color: #fff;
-    padding: 8px 8px 8px 10px;
-    border: 3px dotted #00889e
-}
-
-.bck-box.bck-box-18 {
-    padding: 0 18px 18px;
-    background-color: #b83187;
-    width: 110%;
-    margin-left: -5%
-}
-
-.bck-box.bck-box-18 .bck-title {
-    background-color: #b83187;
-    color: #fff;
-    font-size: 2.3rem;
-    padding-left: 29.7%;
-    padding-top: 8px;
-    padding-bottom: 15px;
-    font-weight: 100;
-    letter-spacing: 1px
-}
-
-.bck-box.bck-box-18 .bck-title:before {
-    content: "NOW YOU!";
-    background-color: #fff;
-    color: #b83187;
-    font-size: 2.9rem;
-    font-weight: 700;
-    padding: 8px 10px;
-    position: absolute;
-    letter-spacing: 2px;
-    margin-left: -34.3%;
-    margin-top: -8px
-}
-
-.bck-box.bck-box-18 .bck-content {
-    background-color: #b83187;
-    color: #fff
-}
-
-.bck-box.bck-box-19 {
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    border: 8px solid #1d1d1b;
-    border-bottom: none
-}
-
-.bck-box.bck-box-19 .bck-title {
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    background-color: #ececec;
-    padding: 10px
-}
-
-.bck-box.bck-box-19 .bck-content {
-    padding: 15px
-}
-
-.bck-box.bck-box-20 {
-    border-radius: 10px;
-    background-color: #ccc
-}
-
-.bck-box.bck-box-21 {
-    border-radius: 15px;
-    background-image: url(images/fondo_caja_whatsapp.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px
-}
-
-.bck-box.bck-box-21 .bck-title {
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    background-color: #ececec;
-    padding: 10px
-}
-
-.bck-box.bck-box-21 .bck-content {
-    padding: 15px
-}
-
-.bck-box.bck-box-22 {
-    border-radius: 10px;
-    background-color: #d5e2a0;
-    border: 2px solid #a2c626;
-    -webkit-box-shadow: 0 0 4px 2px #c0cec5;
-    box-shadow: 0 0 4px 2px #c0cec5;
-    padding: 5px
-}
-
-.bck-box.bck-box-22 .bck-title {
-    background-color: #d5e2a0;
-    padding-left: 15px
-}
-
-.bck-box.bck-box-22 .bck-content {
-    background-image: none;
-    padding-left: 15px
-}
-
-.bck-box.bck-box-23 {
-    border-radius: 10px;
-    background-color: #fff;
-    border: 2px solid #a2c626;
-    -webkit-box-shadow: 0 0 4px 2px #c0cec5;
-    box-shadow: 0 0 4px 2px #c0cec5
-}
-
-.bck-box.bck-box-23 .bck-title {
-    background-color: #fff;
-    padding-left: 15px
-}
-
-.bck-box.bck-box-23 .bck-content {
-    background-image: none
-}
-
-.bck-box.bck-box-24 {
-    margin-top: -21px;
-    border: none;
-    background: #009fa5;
-    width: 387px;
-    margin-left: -55px
-}
-
-.bck-box.bck-box-24 .bck-title {
-    color: inherit
-}
-
-.bck-box.bck-box-24 .bck-content {
-    background-color: #009fa5;
-    padding: 8px 8px 8px 10px
-}
-
-.bck-box.bck-box-25 {
-    margin-top: 15px;
-    background: #fff;
-    border: 2px solid #2e73b9
-}
-
-.bck-box.bck-box-25 .bck-title {
-    color: #2e73b9;
-    padding-left: 10px;
-    padding-top: 10px;
-    padding-bottom: 5px
-}
-
-.bck-box.bck-box-25 .bck-title p {
-    font-weight: 600
-}
-
-.bck-box.bck-box-25 .bck-content {
-    border: 0;
-    text-align: left;
-    padding: 5px 5px 5px 10px
-}
-
-.bck-box.bck-box-25 .bck-title:after {
-    background-image: url(images/icono_vocabularytools.png);
-    content: "";
-    background-size: contain;
-    background-repeat: no-repeat;
-    padding: 27px;
-    position: absolute;
-    right: 14px;
-    width: 10px;
-    height: auto;
-    margin-top: -73px
-}
-
-.bck-box.bck-box-26 {
-    margin-top: 15px;
-    border: 3px solid #06b5da;
-    background: #fff;
-    padding-top: 10px
-}
-
-.bck-box.bck-box-26 .bck-title {
-    color: inherit;
-    background-color: #06b5da;
-    padding: 10px;
-    width: fit-content
-}
-
-.bck-box.bck-box-26 .bck-content {
-    background-color: #fff;
-    border: none
-}
-
-.bck-box.bck-box-27 {
-    margin-top: 15px;
-    border: none;
-    background: transparent
-}
-
-.bck-box.bck-box-27 .bck-title {
-    color: inherit
-}
-
-.bck-box.bck-box-27 .bck-content {
-    background-color: #ffebbe;
-    padding: 8px 8px 8px 19px
-}
-
-.bck-box.bck-box-28 {
-    margin-top: 15px;
-    border: none;
-    background: transparent
-}
-
-.bck-box.bck-box-28 .bck-title {
-    color: inherit
-}
-
-.bck-box.bck-box-28 .bck-content {
-    background-color: #f5aea4;
-    padding: 8px 8px 8px 19px
-}
-
-.bck-box.bck-box-29 {
-    margin-top: 15px;
-    border: none;
-    background: transparent
-}
-
-.bck-box.bck-box-29 .bck-title {
-    color: inherit
-}
-
-.bck-box.bck-box-29 .bck-content {
-    background-color: #dae49b;
-    padding: 8px 8px 8px 19px
-}
-
-.bck-box.bck-box-30 {
-    margin-top: 15px;
-    border: none;
-    background: transparent
-}
-
-.bck-box.bck-box-30 .bck-title {
-    color: inherit
-}
-
-.bck-box.bck-box-30 .bck-content {
-    background-color: #e8dfef;
-    padding: 8px 8px 8px 19px
-}
-
-.bck-box.bck-box-31 {
-    margin-top: 15px;
-    border: none;
-    background: transparent
-}
-
-.bck-box.bck-box-31 .bck-title {
-    color: inherit
-}
-
-.bck-box.bck-box-31 .bck-content {
-    background-color: #fff;
-    border: 1px solid #4ea0a7;
-    border-radius: 15px;
-    padding: 8px 8px 8px 19px
-}
-
-.bck-box.bck-box-32 {
-    margin-top: 15px;
-    background: transparent;
-    border: 2px solid #009fa5;
-    box-shadow: 9px 10px 0 -6px #009fa5
-}
-
-.bck-box.bck-box-32 .bck-title {
-    color: #fff;
-    padding-left: 10px;
-    padding-top: 10px;
-    padding-bottom: 5px
-}
-
-.bck-box.bck-box-32 .bck-content {
-    background-color: #fff;
-    padding: 8px 8px 8px 19px;
-    box-shadow: 9px 10px 0 -6px #009fa5
-}
-
-.bck-box.bck-box-33 {
-    border-radius: 10px;
-    background-color: #f6f6f6
-}
-
-.bck-box.bck-box-34 .bck-title:before {
-    background-image: url(images/iconos_cajaMail.png);
-    content: "";
-    background-size: contain;
-    background-repeat: no-repeat;
-    padding: 0 36px 0 11px;
-    position: relative;
-    left: -2px;
-    z-index: 100;
-    top: -35px;
-    width: 10px
-}
-
-.bck-box.bck-box-34 .bck-title {
-    color: #747579;
-    padding: 10PX;
-    BACKGROUND-COLOR: #dadada
-}
-
-.bck-box.bck-box-34 {
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    border: 2px solid #678cc8;
-    border-top: 25px solid #678cc8
-}
-
-.bck-box.bck-box-34 .bck-content {
-    background-color: #fff;
-    padding: 10PX
-}
-
-.bck-box.bck-box-35 {
-    position: relative;
-    background: url(images/cabecera_project.png) repeat-y;
-    padding: 60px 18px 91px 83px;
-    background-size: cover;
-    top: -21px;
-    left: -97px;
-    width: 125.5%
-}
-
-.bck-box-35 .bck-content {
-    text-align: left;
-    padding: 0;
-    font-family: Conv_FuturaStd-Bold
-}
-
-.bck-box-35 .bck-content p {
-    font-size: 3.2rem;
-    position: relative;
-    left: 100px;
-    color: #fff;
-    text-shadow: #1e1e1c 3px 3px 0;
-    font-family: Conv_FuturaStd-Medium;
-    max-width: 745px
-}
-
-.bck-box.bck-box-9 .bck-title p {
-    background-color: #e50051;
-    width: fit-content;
-    padding: 0 20px 0 10px;
-    position: relative;
-    position: r;
-    left: -10px
-}
 
 #actividad .content .iniciounidad .header .title h3 {
     margin-top: 150px
@@ -2840,6 +2185,10 @@ table td.bck-td-10 {
 
 .activitytag_challenge .bck-box.bck-box-3:after {
     background-image: url(images/icono_caja_02verdederecha.png);
+}
+
+.activitytag_challenge .bck-box.bck-box-5 .bck-title {
+    color: #006294;
 }
 
 
