--- a/style.css
+++ b/style.css
@@ -671,13 +671,15 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
 .bck-title-3:before {
     content: "WRITING SKILL";
     z-index: 100;
-    width: 22%;
-    padding: 10px 36px;
+    width: 18%;
+    padding: 10px 11px 10px 24px;
     background-color: #007c39;
     display: inline-block;
     color: #fff;
-    -moz-border-radius: 0;
+    -moz-border-radius: 20px 0 0 50px;
     border-radius: 20px 0 0 50px;
+    margin-right: 6px;
+    vertical-align: sub;
 }
 
 /*enfasis*/
