--- a/style.css
+++ b/style.css
@@ -745,6 +745,19 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     color: #fff;
 }
 
+.bck-enfasis-9 {
+color: #EC6F59;
+    border: 2px solid #ec6f59 !important;
+    font-size: 2.4rem;
+    background: #ffffff;
+    width: fit-content;
+    padding: 7PX 70PX 7px 24px;
+    border-radius: 30px 10px 37px 10px;
+    font-weight: 700;
+    font-family: 'StradaOT-Semibd';
+    text-transform: uppercase;
+}
+
 .texto_curso li {
     line-height: 1.8em!important
 }
